# computeruse-data-collection

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
computeruse_datacollection/: __init__.py  __main__.py  cli.py
computeruse_datacollection/core/: __init__.py  collector.py  config.py  exporter.py  session.py
computeruse_datacollection/gui/: __init__.py  main_window.py  sessions_window.py  settings_window.py  widgets.py
computeruse_datacollection/recorders/: __init__.py  audio.py  base.py  keyboard.py  mouse.py  screen.py
computeruse_datacollection/utils/: __init__.py  compression.py  storage.py
tests/: __init__.py  conftest.py  test_all.py  test_base.py  test_keyboard.py  test_mouse.py  test_screen.py
